--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+click==7.1.2
 decorator==4.4.2
 dill==0.3.3
+Flask==1.1.2
 future==0.18.2
 gast==0.3.3
 google-auth==1.22.1
@@ -19,12 +21,15 @@ grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 importlib-resources==3.3.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.17.0
 kapre==0.3.4
 Keras-Preprocessing==1.1.2
 librosa==0.8.0
 llvmlite==0.34.0
 Markdown==3.3
+MarkupSafe==1.1.1
 numba==0.51.2
 numpy==1.18.5
 oauthlib==3.1.0
